fix the z-index issues in the toolbars

--- a/public/less/components/filters-toolbar.less
+++ b/public/less/components/filters-toolbar.less
@@ -5,7 +5,7 @@
   background: rgba(51, 51, 51, 0.8);
   border-top: 1px solid black;
   width: 100%;
-  z-index: 301;
+  z-index: 200;
   padding: 6px 0;
 }
 
@@ -30,9 +30,13 @@
   }
 }
 
-.velocity__popover {
+.popover.velocity__popover {
   padding: 15px;
   max-width: 180px;
+
+  > .arrow {
+    left: 22%;
+  }
 }
 
 .velocity__form {
